Fixed build errors by Migrating to slick 2.1